testdata/baselines/reference/submodule/conformance/typeArgumentInferenceWithClassExpression3.errors.txt
typeArgumentInferenceWithClassExpression3.ts(1,29): error TS2564: Property 'prop' has no initializer and is not definitely assigned in the constructor.
typeArgumentInferenceWithClassExpression3.ts(2,5): error TS2322: Type 'undefined' is not assignable to type 'T'.


==== typeArgumentInferenceWithClassExpression3.ts (2 errors) ====
    function foo<T>(x = class { prop: T }): T {
                                ~~~~
!!! error TS2564: Property 'prop' has no initializer and is not definitely assigned in the constructor.
        return undefined;
        ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'T'.
    }
    
    foo(class { prop = "hello" }).length;